contact fix, swipe photos on mobile

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,15 +3,16 @@
     color: white;
     width: 100%;
     position: relative;
+    z-index: 1;
 }
 .contact-icon-wraper{
-    z-index: -1;
     position: absolute;
     top: 0;
     left: 0vw;
     width: auto;
     height: 70%;
     transform: rotate(20deg);
+    z-index: -1;
 }
 .contact-icon{
     height: 100%;
