--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -57,7 +57,7 @@
 }
 
 .second-text-wraper.final-stage{
-    background-color: rgba(35, 74, 141, 0.483);
+    background-color: rgba(35, 74, 141, 0.291);
 }
 .text-wraper.final-stage{
     z-index: 9;
@@ -169,7 +169,7 @@
         bottom: 63vw;
     }
     .background{
-        transform: translateY(180%);
+        transform: translateY(100%);
         height: 100%;
         width: auto;
         z-index: 1;
